--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Build with Maven
-        run: mvn clean install
+
+      - name: Build all microservices
+        run: |
+          # Build each microservice
+          for dir in api-gateway cart-service product service-registry user; do
+            echo "Building $dir"
+            cd $dir
+            mvn clean install
+            cd ..
+          done
